# braiins

open/bosminer/: Cargo.toml
open/bosminer/bosminer-erupter/: Cargo.toml
open/docker/rust/: Makefile
