[package]
name = "bosminer-erupter"
version = "0.1.0"
authors = ["Braiins <braiins@braiins.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
bosminer = { path = "../bosminer" }
bosminer-config = { path = "../bosminer-config" }
bosminer-macros = { path = "../bosminer-macros" }
ii-async-compat = { path = "../../utils-rs/async-compat" }
ii-bitcoin = { path = "../../coins/bitcoin" }
ii-logging = { path = "../../utils-rs/logging" }
failure = "0.1.5"
lazy_static = "1.3"
packed_struct="0.3"
packed_struct_codegen = "0.3"
libusb = { version = "0.3.0" }
config = "0.9.3"

[patch.crates-io]
bit-set = { path = "../../third-party/bit-set-0.2.0" }
